kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venues-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: venues
  template:
    metadata:
      labels:
        app: venues
    spec:
      containers:
      - image: ribvid/rso-venues:1.0.0
        name: venues
        ports:
        - containerPort: 3000
          name: server
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: venues
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    protocol: TCP
    targetPort: server
  selector:
    app: venues
